docs/0.6/_sources/api/gammapy.irf.EnergyDispersion2D.rst.txt


EnergyDispersion2D
==============================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDispersion2D
   :show-inheritance:

   
     
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EnergyDispersion2D.default_interp_kwargs
      ~EnergyDispersion2D.e_true
      ~EnergyDispersion2D.migra
      ~EnergyDispersion2D.offset

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EnergyDispersion2D.from_gauss
      ~EnergyDispersion2D.from_hdulist
      ~EnergyDispersion2D.from_table
      ~EnergyDispersion2D.get_response
      ~EnergyDispersion2D.peek
      ~EnergyDispersion2D.plot_bias
      ~EnergyDispersion2D.plot_migration
      ~EnergyDispersion2D.read
      ~EnergyDispersion2D.to_energy_dispersion

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: e_true
   .. autoattribute:: migra
   .. autoattribute:: offset

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: from_gauss
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: get_response
   .. automethod:: peek
   .. automethod:: plot_bias
   .. automethod:: plot_migration
   .. automethod:: read
   .. automethod:: to_energy_dispersion

   
   